# CopyOdomerty

./: README.md
Docs/: UMLPhase1Odo.drawio
FRC2025Test/.wpilib/: wpilib_preferences.json
Odometry/Docs/: SequenceDiagram.puml  UMLv1_5.puml
Odometry/Docs/PlantUML code/: Component diagram.txt
Odometry/Odometry/: CMakeLists.txt
Odometry/Odometry/src/main/cpp/: Robot.cpp
Odometry/Odometry/src/main/cpp/hardware/: EncoderSensor.cpp  GyroSensor.cpp  Sensor.cpp
Odometry/Odometry/src/main/cpp/math/: MathUtils.cpp  Vector2D.cpp
Odometry/Odometry/src/main/cpp/mocking/: MEncoderSensor.cpp  MGyroSensor.cpp
Odometry/Odometry/src/main/cpp/odometry/: Odometry.cpp  Pose.cpp
Odometry/Odometry/src/main/cpp/swerve/: SwerveDriveKinematics.cpp  SwerveModule.cpp
Odometry/Odometry/src/main/include/: Constants.h  Robot.h
Odometry/Odometry/src/main/include/Rotation/: RotationController.h  SimpleHeadingController.h  TeleopRotationHandler.h
Odometry/Odometry/src/main/include/hardware/: EncoderSensor.h  GyroSensor.h  IEncoderSensor.h  IGyroSensor.h  Module.h  MotorController.h  Sensor.h
Odometry/Odometry/src/main/include/hardware/Interfaces/: IEncoderSensor.h  IMotorController.h
Odometry/Odometry/src/main/include/math/: MathUtils.h  Vector2D.h
Odometry/Odometry/src/main/include/mocking/: MEncoderSensor.h  MGyroSensor.h
Odometry/Odometry/src/main/include/odometry/: Odometry.h  Pose.h
Odometry/Odometry/src/main/include/swerve/: ChassisState.h  SwerveDriveKinematics.h  SwerveModule.h  WheelModuleState.h
